--- a/css/style.css
+++ b/css/style.css
@@ -16,13 +16,21 @@ body {
     clear: both;
 }
 
+.centratura {     /* sezione 1 2 3  */
+    width: 65%;
+    margin: 0 auto;
+}
+
+.block {
+    display: block;
+}
 /* header */
 
 /* nav */
 nav {
     height: 80px;
     margin: auto 30px;
-    line-height: 80px;
+    line-height: 40px;
     vertical-align: middle;
 }
 
@@ -72,7 +80,7 @@ nav {
 
 #jumbotron {
     width: 80%;
-    margin: 0 auto;
+    margin: 0 auto ;
 }
 
 h1 {
@@ -116,4 +124,100 @@ p {
    padding-left: 75px;
 }
 /* /jumbotron */
+
+/* main */
+
+.titolo-section {
+    margin: 220px 0  40px;
+}
+
+/* section 1 */
+
+.titolo-section h2 {
+    font-size: 50px;
+    margin-bottom: 60px;
+}
+
+.titolo-section span {
+    padding-right: 5px;
+}
+
+#margin-section-1 {
+    margin: 0px 3%;
+}
+
+aside {
+    float: left;
+    width: 31%;
+    border: solid 1px black;
+    height: 1000px;
+    margin: 0 0 200px;
+}
+
+.title-aside {
+    text-align: center;
+    border-bottom: solid black 1px;
+    height: 40px;
+    line-height: 40px;
+    vertical-align: middle;
+}
+
+.title-aside .fa-user {
+    font-size: 18px;
+}
+
+.centratura-aside {
+    padding: 0 25px;
+}
+
+aside h3 {
+    font-size: 30px;
+    margin: 30px 0 20px;
+}
+.costo {
+    font-weight: bold;
+    margin: 18px 0;
+}
+
+.mese {
+    font-size: 14px;
+    color: grey;
+    margin: 18px 0 50px;
+}
+
+li {
+    font-size: 14px;
+    list-style-type: none;
+    margin: 20px 0;
+}
+
+aside .btn {
+    margin: 60px 0 30px;
+    max-width: 220px;
+}
+.acquista-ora {
+    margin: 30px 0;
+    display: block;
+}
+
+.icon {
+    display: inline-block;
+    font-size: 15px;
+
+}
+hr {
+    margin: 40px 0 55px;
+    width: 50px;
+}
+
+.key-points {
+    font-size: 20px;
+}
+
+.fa-check {
+    font-size: 15px;
+    color: rgb(2, 134, 241);
+}
+/* main */
+
 
