--- a/css/style.css
+++ b/css/style.css
@@ -27,11 +27,24 @@ body {
 /* header */
 
 /* nav */
-nav {
+#sfondo-bianco {
+    background-color: white;
+    max-width: 100%;
     height: 80px;
+    border-bottom: solid 1px grey;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 999; 
+}
+
+nav {
+    height: 100%;
     margin: auto 30px;
     line-height: 40px;
     vertical-align: middle;
+    
 }
 
 #nav-sx {
@@ -76,6 +89,7 @@ nav {
 #sfondo-jumbotron {
     background-color: rgb(63, 127, 143);
     height: 845px;
+    margin-top: 80px;
 }
 
 #jumbotron {
@@ -150,7 +164,7 @@ aside {
     float: left;
     width: 31%;
     border: solid 1px black;
-    height: 1000px;
+    min-height: 1000px;
     margin: 0 0 200px;
 }
 
