--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ body {
     clear: both;
 }
 
-.centratura {     /* sezione 1 2 3  */
+.centratura {     /* sezione 1 2 3 5 */
     width: 65%;
     margin: 0 auto;
 }
@@ -426,13 +426,77 @@ aside hr {
     width: 50px;
     margin-bottom: 50px;
 }
-
-
 /* quadrato centrale  */
 
-/* section 4 */
+/* /section 4 */
 
+
+
+/* section 5 */
+
+/* banner con bottone prova */
+#sfondo-section-5 {
+    position: relative;
+    background-color: rgb(180, 208, 231);
+}
+
+#banner-prova > div {
+    padding: 180px 0;
+}
+
+#banner-prova h2 {
+    color: rgb(97, 8, 43);
+    float: left;
+    font-size: 50px;
+    width: 50%;
+}
+
+#prova-gratuita {
+    float: right;
+    width: 300px;
+    padding: 8px 0;
+}
+
+#container-btn-section-5 {
+    width: 50%;
+    display: inline-block;
+}
+/* banner con bottone prova */
+
+
+/* domande frequenti */
+.domande-frequenti {
+    margin-top: 130px;
+}
+
+.domande-frequenti h2 {
+    font-size: 35px;
+    border-bottom: solid 1px black;
+    padding-bottom: 35px;
+}
+.item-question {
+    height: 80px;
+    border-bottom: solid 1px black;
+}
+
+.item-question span {
+    display: inline-block;
+    font-weight: bold;
+    line-height: 80px;
+    vertical-align: middle;
+}
+
+.fa-chevron-down {
+    float: right;
+    font-size: 18px;
+    line-height: 80px;
+    vertical-align: middle;
+}
+/* /domande frequenti */
+
+/* /section 5 */
 
 /* main */
 
-
+/* footer */
+/* /footer */
