--- a/bonus/css/style.css
+++ b/bonus/css/style.css
@@ -583,14 +583,20 @@ footer {
     padding: 70px 0 10px 0;
 }
 
-.text-footer {
+.text-footer a {
     display: block;
     font-size: 15px;
     color: white;
     font-weight: bold;
     padding: 10px 0;
+    text-decoration: none;
 }
 
+/* bonus footer */
+.text-footer:hover > a {
+    text-decoration: underline;
+}
+/* /bonus footer */
 #lingua {
     margin: 80px 0 40px;
     border-top: white solid 1px;
